# Multi-Agent-Assignment

supportflow-ai/: README.md  demo_log.txt  main.py  nodes.py  prompts.py  pyproject.toml  state.py  utils.py
supportflow-ai/agents/: classification.py  intake.py  priority.py  resolution.py
supportflow-ai/tools/: escalation_tool.py  kb_tool.py
